# lms_mcp

./: .env.example  .gitignore  AI_Powered_LMS_Assistant_MCP_Project_Idea.md  Dockerfile  README.md  prd_mcp.md  pyproject.toml  run_fetch.py  run_solve.py  test_full.py  test_login.py
.github/workflows/: ci.yml
app/: main.py
app/ai/: classifier.py  client.py  solver.py  test_client.py
app/database/: models.py  repository.py  test_models.py
app/documents/: generator.py  templates.py
app/lms/: assignments.py  auth.py  browser.py  selectors.py  submission.py
app/mcp/: models.py  server.py  tools.py
app/notifications/: notifier.py
app/scheduler/: monitor.py
app/ui/: app.py  routes.py
app/ui/templates/: dashboard.html
config/: settings.py
migrations/: 0001_extracted_table.sql  0002_extracted_table.sql
tests/: conftest.py  test_classifier.py  test_documents.py  test_repository.py  test_server.py  test_settings.py  test_solver.py  test_tools.py
