[project]
name = "lms-mcp-assistant"
version = "0.1.0"
description = "AI-Powered LMS Assistant using MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "apscheduler>=3.10.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lms-mcp = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "config*"]
exclude = ["site_files", "data", "generated", "tests"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.j2"]
